fix wrapping on cards

--- a/components/Cards/style.scss
+++ b/components/Cards/style.scss
@@ -104,6 +104,7 @@ $iphone-plus: 414px;
     display: inline-flex;
     position: relative;
     top: 0.5em;
+    word-break: normal;
   }
 
   &-arrow {
